# Privournal

./: .gitignore  DatabaseTest.py  FirstCompiledCode.py  Functions.py  Main.py  MainCode.py  README.md  Rough.py  Temp1.py  privournal-demo.cast  privournal-demo1.cast  pyproject.toml
