[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "privournal"
version = "1.0.4"
description = "A privacy-focused journal encryption tool"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "python-dotenv",
    "mysql-connector-python"
]

[tool.setuptools]
py-modules = ["MainCode"]

[project.scripts]
privournal = "MainCode:start"